--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,12 @@
   "appID": "e1d3f9ac50c54731a5d723b8747db66b",
   "dependencies": {
     "devkit-core": "https://github.com/gameclosure/devkit-core#v2.0.19",
-    "devkit-entities": "https://github.com/gameclosure/devkit-entities#v0.2.4"
+    "devkit-entities": "https://github.com/gameclosure/devkit-entities#v0.2.4",
+    "devkit-facebook": "https://github.com/gameclosure/facebook#v2.0.0"
+  },
+  "facebook": {
+    "facebookAppID": 331202163734875,
+    "facebookDisplayName": "Piu Piu"
   },
   "icon": "resources/icons/favicon.png",
   "ios": {
@@ -33,6 +38,9 @@
     "versionCode": 11
   },
   "shortName": "PiuPiu",
+  "splash": {
+    "universal": "resources/splash/Default-568h@2x.png"
+  },
   "studio": {
     "domain": "shirkan.com",
     "name": "Meganeev Studios"
@@ -40,9 +48,6 @@
   "supportedOrientations": [
     "landscape"
   ],
-  "splash" : {
-    "universal" : "resources/splash/Default-568h@2x.png"
-  },
   "title": "Piu Piu",
   "version": "0.6"
 }
