--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,7 @@
     "devkit-facebook": "https://github.com/gameclosure/facebook#v2.0.0"
   },
   "icon": "resources/icons/favicon.png",
+  "ttf": "resources/fonts/arcadepi.ttf",
   "ios": {
     "appleID": 946898089,
     "bundleID": "com.shirkan.piupiu",
