--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "devkit-core": "https://github.com/gameclosure/devkit-core#v2.0.19",
     "devkit-entities": "https://github.com/gameclosure/devkit-entities#v0.2.4",
-    "devkit-facebook": "https://github.com/gameclosure/facebook#v2.0.0"
+    "devkit-facebook": "https://github.com/gameclosure/facebook#v2.0.0",
+    "devkit-parallax": "https://github.com/gameclosure/devkit-parallax#v0.1.3"
   },
   "icon": "resources/icons/favicon.png",
   "ios": {
@@ -50,8 +51,8 @@
     "landscape"
   ],
   "title": "Piu Piu",
-  "version": "0.6",
   "ttf": [
     "resources/fonts/ArcadepixRegular.ttf"
-  ]
+  ],
+  "version": "0.6"
 }
